--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SVG Icon Viewer</title>
+    <title>SVG Icon Viewer Test</title>
     <style>
         table {
             border-collapse: collapse;
